--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "Upload your Tumblr theme via node or CLI",
   "main": "index.js",
   "repository": "bfred-it/node-tumblr-upload",
+  "bin": {
+    "tumblr-upload": "cli.js"
   },
   "files": [
-    "index.js"
+    "index.js",
+    "cli.js"
   ],
   "keywords": [
+    "cli-app",
+    "cli",
+    "bin",
     "nodejs",
     "tumblr",
     "upload",
@@ -23,6 +29,8 @@
   "homepage": "https://github.com/bfred-it/node-tumblr-upload",
   "dependencies": {
     "app-root-path": "^1.0.0",
-    "js-yaml": "^3.2.7"
+    "js-yaml": "^3.2.7",
+    "log-symbols": "^1.0.2",
+    "meow": "^3.1.0"
   }
 }
