--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "node-tumblr-upload",
+  "name": "tumblr-upload",
   "version": "0.5.0",
   "description": "Upload your Tumblr theme via node or CLI",
   "main": "index.js",
-  "repository": "bfred-it/node-tumblr-upload",
+  "repository": "bfred-it/tumblr-upload",
   "bin": {
     "tumblr-upload": "cli.js"
   },
@@ -24,9 +24,9 @@
   "author": "Federico Brigante",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/bfred-it/node-tumblr-upload/issues"
+    "url": "https://github.com/bfred-it/tumblr-upload/issues"
   },
-  "homepage": "https://github.com/bfred-it/node-tumblr-upload",
+  "homepage": "https://github.com/bfred-it/tumblr-upload",
   "dependencies": {
     "app-root-path": "^1.0.0",
     "js-yaml": "^3.2.7",
