--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tumblr-upload",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "description": "Upload your Tumblr theme via node or CLI",
   "main": "index.js",
   "repository": "bfred-it/tumblr-upload",
@@ -29,7 +29,7 @@
   "homepage": "https://github.com/bfred-it/tumblr-upload",
   "dependencies": {
     "app-root-path": "^1.0.0",
-    "js-yaml": "^3.2.7",
+    "iniparser": "^1.0.5",
     "log-symbols": "^1.0.2",
     "meow": "^3.1.0"
   }
