--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   ],
   "scripts": {
     "test": "mocha --bail",
-    "test-all": "env VERIFY_UPLOAD=1 mocha --bail"
+    "test-all": "env VERIFY_UPLOAD=1 mocha --bail",
+    "coveralls": "istanbul cover _mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage"
   },
   "keywords": [
     "cli-app",
@@ -38,7 +39,10 @@
     "meow": "^3.1.0"
   },
   "devDependencies": {
+    "coveralls": "^2.11.2",
+    "istanbul": "^0.3.17",
     "mocha": "*",
+    "mocha-lcov-reporter": "0.0.2",
     "mock-fs": "^3.0.0",
     "nock": "^2.7.0",
     "should": "^7.0.1"
