Updated travis node version to 4, 6, latest

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 sudo: false
 language: node_js
 node_js:
-  - 'iojs'
-  - '0.12'
-  - '0.10'
+  - '4'
+  - '6'
+  - 'latest'
 after_script:
   - npm run coveralls
